# data-service-poc

./: .gitignore  Makefile  README.md  pyproject.toml
src/: config.py
src/api/: main.py
src/cache/: base.py  exceptions.py  file_cache.py  in_memory.py  redis.py
src/query/: performance_utils.py  query.py  query_plan.py  query_source.py
src/query/plan/: __init__.py  base.py  in_memory.py  sql.py
src/query/sources/: __init__.py  base.py  database.py  file.py
src/query/steps/: __init__.py  base.py  filter.py  join.py  random.py
tests/api/: client.py  test_api.py  test_query_execute.py
tests/cache/: test_cache_file.py  test_cache_in_memory.py  test_cache_redis.py
tests/fixtures/: postgres.py  sample_data.csv  test_data.sql  users.csv
tests/query/: test_query.py
