[tool.poetry]
name = "data-service-poc"
version = "0.1.0"
description = ""
authors = ["David Nowinsky <david@nowinsky.net>"]
readme = "README.md"
packages = [{include = "api", from = "src"}, {include = "query", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = "^2.1.1"
pyarrow = "^12.0.1"
polars = "^0.18.12"
connectorx = "0.3.2a7"
pypika = "^0.48.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
python-dotenv = "^1.0.0"
docker = "^6.1.3"
ipdb = "^0.13.13"
psycopg = {extras = ["binary"], version = "^3.1.9"}
pytest-asyncio = "^0.21.1"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests/*"
asyncio_mode = "auto"
